--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://root:Prajwalb231@cluster0.79azz.mongodb.net/Amongus_dashboard?authMechanism=DEFAULT
 JWT_SECRET=KY09sz+jvT3S/hdV27NjI6DC5pW7w2sber6rTXYtZ1Y=
 PORT=3022
-REACT_APP_API_URL = http://amongusdashboard.craftifyproductions.com/api/
+REACT_APP_API_URL = https://amongusdashboard.craftifyproductions.com/api/
 URL= http://localhost:3022/api
